--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-splash-screen": "~0.15.1",
@@ -30,7 +32,12 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^28.1.5",
+    "@types/react": "^18.0.15",
+    "@types/react-native": "^0.69.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^4.7.4"
   },
   "private": true
 }
