--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-web": "^0.13.12",
+    "react-native-web-swiper": "^2.2.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
