--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-blur": "~11.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -28,10 +29,10 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web": "^0.13.12",
     "react-native-web-swiper": "^2.2.1",
-    "styled-components": "^5.3.5",
-    "expo-blur": "~11.1.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
