--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web": "^0.13.12",
     "react-native-web-swiper": "^2.2.1",
+    "react-query": "^3.39.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/jest": "^28.1.5",
-    "@types/react": "^18.0.15",
+    "@types/react": "^17.0.47",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
   "private": true
